header&footer complete

--- a/index.html
+++ b/index.html
@@ -11,5 +11,19 @@
         <p class="header">Contact</p>
     </header>
 
+    <section>
+        <h1>My New Website</h1>
+    </section>
+    
 
+
+
+
+
+
+
+
+    <footer>
+        <p>@2022 My New Page</p>
+    </footer>
 </html>
